k8s/ingress/ingress-service-2.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: simple-ingress-example-s2
  annotations:
   nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
     paths:
     - path: /nginx
       backend:
        serviceName: nginx
        servicePort: 80
     - path: /tomcat
       backend:
        serviceName: tomcat
        servicePort: 80
